--- a/morph_project.yml
+++ b/morph_project.yml
@@ -1,14 +1,14 @@
 build:
-  build_args: null
-  context: null
+  # build_args: null
+  # context: null
   framework: morph
   package_manager: uv
   runtime: python3.12
   use_custom_dockerfile: false
 default_connection: DUCKDB
 deployment:
-  aws: null
-  gcp: null
+  # aws: null
+  # gcp: null
   provider: aws
 package_manager: uv
 profile: default
